Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Title</title>
+</head>
+<body>
+  <section style="text-align:center;">Test</section>
+</body>
+</html>
